# longfellow-zk

./: 404.html  README.md  android.sh  index.html  index.xml  ios.sh  sitemap.xml
rust/: Cargo.toml  README.md  rustfmt.toml
rust/.cargo/: config.toml
rust/applications/mdoc_zk/artifacts/: Cargo.toml
rust/applications/mdoc_zk/artifacts/src/: lib.rs
rust/applications/mdoc_zk/circuits/: Cargo.toml
rust/applications/mdoc_zk/circuits/src/: lib.rs  traits.rs
rust/applications/mdoc_zk/compile/: Cargo.toml
rust/applications/mdoc_zk/compile/src/: allocate_hash.rs  allocate_sig.rs  allocator.rs  generate_hash.rs  generate_sig.rs  lib.rs
rust/applications/mdoc_zk/proto/: Cargo.toml
rust/applications/mdoc_zk/prover_only/: Cargo.toml
rust/applications/mdoc_zk/runtime/: Cargo.toml
rust/applications/mdoc_zk/testcases/: Cargo.toml
rust/applications/mdoc_zk/verifier_only/: Cargo.toml
rust/circuits/analog_adder/: Cargo.toml
rust/circuits/analog_adder/src/: circuit.rs  lib.rs
rust/circuits/analog_adder/tests/: analog_adder.rs
rust/circuits/analog_decoder/: Cargo.toml
rust/circuits/analog_decoder/src/: circuit.rs  lib.rs  proto.rs
rust/circuits/analog_decoder/tests/: analog_decoder.rs
rust/circuits/arithmetic/: Cargo.toml
rust/circuits/arithmetic/src/: circuit.rs  lib.rs
rust/circuits/arithmetic/tests/: arithmetic.rs
rust/circuits/big_bitvec/: Cargo.toml
rust/circuits/big_bitvec/src/: circuit.rs  concrete.rs  lib.rs
rust/circuits/bignum/: Cargo.toml
rust/circuits/bignum/src/: circuit.rs  lib.rs
rust/circuits/bit_plucker/: Cargo.toml
rust/circuits/bit_plucker/src/: circuit.rs  concrete.rs  lib.rs
rust/circuits/bit_plucker/tests/: bit_plucker_tests.rs
rust/circuits/bitvec/: Cargo.toml
rust/circuits/bitvec/src/: circuit.rs  concrete.rs  lib.rs
rust/circuits/boolean/: Cargo.toml
rust/circuits/boolean/src/: circuit.rs  concrete.rs  lib.rs
rust/circuits/ec/: Cargo.toml
rust/circuits/ec/src/: circuit.rs  concrete.rs  lib.rs
rust/circuits/ec/tests/: ec.rs
rust/circuits/ecdsa2/: Cargo.toml
rust/circuits/ecdsa2/src/: allocate.rs  circuit.rs  concrete.rs  evaluate.rs  lib.rs  traits.rs
rust/circuits/experimental/: Cargo.toml
rust/circuits/experimental/src/: lib.rs
rust/circuits/gf2_128/: Cargo.toml
rust/circuits/gf2_128/src/: circuit.rs  lib.rs
rust/circuits/gf2_128/tests/: gf2_128.rs
rust/circuits/lookup/: Cargo.toml
rust/circuits/lookup/src/: circuit.rs  lib.rs
rust/circuits/lookup/tests/: lookup.rs
rust/circuits/mac/: Cargo.toml
rust/circuits/mac/src/: allocate.rs  circuit.rs  concrete.rs  evaluate.rs  lib.rs
rust/circuits/mac_gf128/: Cargo.toml
rust/circuits/mac_gf128/src/: allocate.rs  circuit.rs  concrete.rs  lib.rs
rust/circuits/mac_gf128/tests/: mac_gf128.rs
rust/circuits/memcmp/: Cargo.toml
rust/circuits/memcmp/src/: circuit.rs  lib.rs
rust/circuits/memcmp/tests/: memcmp.rs
rust/circuits/polynomial/: Cargo.toml
rust/circuits/polynomial/src/: circuit.rs  lib.rs
rust/circuits/polynomial/tests/: polynomial.rs
rust/circuits/routing/: Cargo.toml
rust/circuits/routing/src/: circuit.rs  lib.rs
rust/circuits/routing/tests/: routing.rs
rust/circuits/sha256/: Cargo.toml
rust/circuits/sha256/src/: allocate.rs  circuit.rs  concrete.rs  constants.rs  evaluate.rs  lib.rs
rust/circuits/sha256msg/: Cargo.toml
rust/circuits/sha256msg/src/: allocate.rs  circuit.rs  concrete.rs  constants.rs  evaluate.rs  lib.rs
rust/compile/algebra/: Cargo.toml
rust/compile/algebra/src/: field.rs  fp.rs  gf2_128.rs  interpolation.rs  lib.rs  nat.rs  p256.rs  q256.rs  secp256r1.rs
rust/compile/compiler/: Cargo.toml
rust/compile/compiler/src/: algsimp.rs  arena.rs  assertion.rs  copy.rs  cse.rs  ir.rs  ir_to_quad.rs  lib.rs  logic_impl.rs  node.rs  quad.rs  scheduler.rs  segment.rs  top.rs
rust/compile/eval/: Cargo.toml
rust/compile/eval/src/: eval.rs  lib.rs
rust/compile/logic/: Cargo.toml
rust/compile/logic/src/: concrete.rs  eval.rs  lib.rs  logic.rs  scope.rs
rust/compile/logic/tests/: eval.rs
rust/compile/proto/: Cargo.toml
rust/compile/proto/src/: debug.rs  lib.rs
rust/core/algebra/: Cargo.toml
rust/core/algebra/src/: ec.rs  field.rs  gf2_128.rs  lib.rs  nat.rs  proto.rs
rust/core/proto/: Cargo.toml
rust/core/proto/src/: cache.rs  circuit.rs  layer.rs  lib.rs  uleb.rs
rust/core/proto/tests/: archive_test.rs  serialization.rs
rust/runtime/algebra/: Cargo.toml
rust/runtime/algebra/benches/: fft_benchmark.rs  lch14_benchmark.rs  p256_benchmark.rs  q256_benchmark.rs  reed_solomon_benchmark.rs  rfft_benchmark.rs
rust/runtime/algebra/src/: blas.rs  convolution.rs  fft.rs  field.rs  fp2.rs  fp_generic.rs  gf2_128.rs  interpolator.rs  lch14.rs  lch14_reed_solomon.rs  lib.rs  mem.rs  middle_product.rs  nat.rs  permutations.rs  poly.rs  q256.rs  reed_solomon.rs  rfft.rs  secp256r1.rs  subfield.rs  utility.rs
rust/runtime/ligero/: Cargo.toml
rust/runtime/ligero/src/: common.rs  geometry.rs  lib.rs  param.rs  prover.rs  tableau.rs  transcript.rs  verifier.rs
rust/runtime/ligero/tests/: ligero.rs
rust/runtime/merkle/: Cargo.toml
rust/runtime/merkle/src/: commitment.rs  heap.rs  lib.rs
rust/runtime/merkle/tests/: merkle.rs
rust/runtime/proto/: Cargo.toml
rust/runtime/proto/src/: lib.rs  ligero.rs  merkle.rs  sumcheck.rs  util.rs  zk.rs
rust/runtime/proto/tests/: proto.rs
rust/runtime/random/: Cargo.toml
rust/runtime/random/src/: deterministic.rs  lib.rs  secure.rs  transcript.rs
rust/runtime/random/tests/: transcript.rs
rust/runtime/sumcheck/: Cargo.toml
rust/runtime/sumcheck/benches/: sumcheck_bench.rs
rust/runtime/sumcheck/src/: dense.rs  eq.rs  eval.rs  hquad.rs  lib.rs  pad.rs  poly.rs  prover.rs  transcript.rs  verifier.rs
rust/runtime/zk/: Cargo.toml
rust/runtime/zk/src/: circuit_pad.rs  common.rs  expression.rs  lib.rs  prover.rs  symbolic_sumcheck_verifier.rs  verifier.rs
rust/runtime/zk/tests/: zk.rs
rust/util/: Cargo.toml
rust/util/src/: array.rs  lib.rs  memoize.rs  morton.rs
rust/util/tests/all/: mod.rs  morton.rs  util.rs
(+459 files in other folders)
