[package]
name = "circuits-bignum"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
compile-algebra = { path = "../../compile/algebra" }
compile-logic = { path = "../../compile/logic" }
util = { path = "../../util" }
core-algebra = { path = "../../core/algebra" }
circuits-boolean = { path = "../boolean" }
