[package]
name = "circuits-bitvec"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
compile-algebra = { path = "../../compile/algebra" }
compile-logic = { path = "../../compile/logic" }
util = { path = "../../util" }
compile-eval = { path = "../../compile/eval", optional = true }
circuits-boolean = { path = "../boolean" }
circuits-arithmetic = { path = "../arithmetic" }
runtime-algebra = { path = "../../runtime/algebra", optional = true }

[features]
testonly = [
    "dep:compile-eval",
    "dep:runtime-algebra",
    "compile-logic/testonly",
    "circuits-boolean/testonly",
]

[dev-dependencies]
compile-compiler = { path = "../../compile/compiler" }
circuits-bitvec = { path = "./", features = ["testonly"] }
core-proto = { path = "../../core/proto" }
runtime-zk = { path = "../../runtime/zk" }
runtime-algebra = { path = "../../runtime/algebra" }
runtime-random = { path = "../../runtime/random" }
runtime-proto = { path = "../../runtime/proto" }
serde_json = "1.0"
