[package]
name = "circuits-experimental"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
compile-algebra = { path = "../../compile/algebra" }
circuits-boolean = { path = "../boolean" }
circuits-bitvec = { path = "../bitvec" }
circuits-ec = { path = "../ec" }
compile-logic = { path = "../../compile/logic" }
compile-eval = { path = "../../compile/eval", optional = true }
runtime-algebra = { path = "../../runtime/algebra", optional = true }
num-bigint = "0.4"
core-algebra = { path = "../../core/algebra" }

[features]
testonly = [
    "dep:compile-eval",
    "dep:runtime-algebra",
    "compile-logic/testonly",
    "circuits-boolean/testonly",
    "circuits-bitvec/testonly",
    "circuits-ec/testonly",
]

[dev-dependencies]
compile-compiler = { path = "../../compile/compiler" }
circuits-experimental = { path = "./", features = ["testonly"] }

[package.metadata.cargo-udeps.ignore]
dev-dependencies = ["circuits-experimental"]
