[package]
name = "compile-eval"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
core-algebra = { path = "../../core/algebra" }
core-proto = { path = "../../core/proto" }
compile-algebra = { path = "../algebra" }
compile-logic = { path = "../logic" }
compile-proto = { path = "../proto" }
runtime-algebra = { path = "../../runtime/algebra" }
