[package]
name = "compile-logic"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
compile-algebra = { path = "../algebra" }
core-algebra = { path = "../../core/algebra" }
util = { path = "../../util" }
runtime-algebra = { path = "../../runtime/algebra", optional = true }

[features]
testonly = ["dep:runtime-algebra", "runtime-algebra/testonly"]
