[package]
name = "runtime-random"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
sha2 = { version = "0.10.8", features = ["asm"] }
aes = "0.8.4"
getrandom = "0.3"
runtime-algebra = { path = "../algebra" }
core-algebra = { path = "../../core/algebra" }

[features]
testonly = []
